--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "AWAIS-MD-V3",
+  "name": "MAFIA-MD-V3",
   "version": "4.0.0",
-  "description": "A WHATSAPP BOT CREATED BY AWAISXD",
+  "description": "A WHATSAPP BOT CREATED BY MAFIA ADEEL",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name AWAIS-MD",
-    "stop": "pm2 stop AWAIS-MD",
-    "restart": "pm2 restart AWAIS-MD"
+    "start": "pm2 start index.js --deep-monitoring --attach --name MAFIA-MD",
+    "stop": "pm2 stop MAFIA-MD",
+    "restart": "pm2 restart MAFIA-MD"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
