--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "AWAIS-MD",
-  "description": "ᴊᴀᴠᴀsᴄʀɪᴘᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴄʀᴇᴀᴛᴇᴅ ʙʏ ᴀᴡᴀɪs ᴍᴅ",
-  "logo": "https://github.com/Awais-star-a11y/TESTING-REPO/raw/refs/heads/main/IMG-20250409-WA0093.jpg",
+  "name": "MAFIA-MD",
+  "description": "ᴊᴀᴠᴀsᴄʀɪᴘᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴄʀᴇᴀᴛᴇᴅ ʙʏ ᴍᴀғɪᴀ ᴍᴅ",
+  "logo": "https://files.catbox.moe/7nf8cb.jpg",
   "keywords": ["bot"],
   "success_url": "/",
 
@@ -16,19 +16,19 @@
     "ALIVE_IMG": {
       "description": "paste your image url if you don't have you can use this public url.",
       "required": true,
-      "value": "https://github.com/Awais-star-a11y/TESTING-REPO/raw/refs/heads/main/IMG-20250409-WA0093.jpg"
+      "value": "https://files.catbox.moe/7nf8cb.jpg"
     }, 
     
     "OWNER_NUMBER": {
       "description": "BOT OWNER NUMBER",
       "required": false,
-      "value": "9231828"
+      "value": "923131613252"
     },
     
     "OWNER_NAME": {
       "description": "BOT OWNER NAME",
       "required": false,
-      "value": "AWAISXD"
+      "value": "ᴍᴀғɪᴀxᴀᴅᴇᴇʟ"
     }, 
     
     "ALIVE_MSG": {
@@ -136,7 +136,7 @@
     "BOT_NAME": {
       "description": "write hear your name.",
       "required": true,
-      "value": "ᴀᴡᴀɪs ᴍᴅ"
+      "value": "ᴍᴀғɪᴀ ᴍᴅ"
     }, 
 
       "READ_MESSAGE": {
@@ -147,18 +147,18 @@
     "CAPTION": {
       "description": "enter your caption if you want to show on menu.",
       "required": true,
-      "value": "*ᴘᴏᴡᴅᴇʀᴇᴅ ʙʏ ᴀᴡᴀɪs ᴍᴅ*"
+      "value": "*ᴘᴏᴡᴅᴇʀᴇᴅ ʙʏ ᴍᴀғɪᴀ ᴍᴅ*"
     }, 
     "AUTO_STATUS__MSG": {
       "description": "enter your caption if you want to show on status reply.",
       "required": true,
-      "value": "𝒚𝒐𝒖𝒓 𝒔𝒕𝒂𝒕𝒖𝒔 𝒔𝒆𝒆𝒏 𝒋𝒖𝒔𝒕 𝒏𝒐𝒘 𝒃𝒚 𝒂𝒘𝒂𝒊𝒔 𝒎𝒅"
+      "value": "𝒚𝒐𝒖𝒓 𝒔𝒕𝒂𝒕𝒖𝒔 𝒔𝒆𝒆𝒏 𝒋𝒖𝒔𝒕 𝒏𝒐𝒘 ᴮᵞ ᴹᴬᶠᴵᴬ ᴬᴰᴱᴱᴸ"
     },    
 
       "AUTHOR": {
       "description": "stickerpack author name",
       "required": true,
-      "value": "AWAIS MD"
+      "value": "MAFIA MD"
     },
 
     "PACKNAME": {
